# Todo

./: .env.example  .gitignore  Cargo.toml  database.sql  docker-compose.yml  index.html  index.js  package.json  todos.json  websocket.js
frontend/: index.html
frontend/src/: App.jsx
frontend/src/components/: Todo.jsx
src/: config.rs  crud.rs  handlers.rs  main.rs  models.rs
